--- a/src/css/pages/_oneBook.scss
+++ b/src/css/pages/_oneBook.scss
@@ -1,11 +1,32 @@
+$color-primary: #c69963;
+$color-primary-dark: #B28451;
+
+$color-secondary: #101d2cbe;
+
+$color-grey-light-1: #f9f7f6;
+$color-grey-light-2: #aaa;
+
+$color-grey-dark-1: #54483A;
+$color-grey-dark-2: #6D5D4B;
+
 .oneBook{
     display: flex;
     justify-content: space-around;
 position: relative;
 box-shadow: 1px 1px 1px 2px rgba(10, 6, 6, 0.507);
-background-image:linear-gradient(-90deg,rgba(228, 230, 214, 0.603) ,rgba(139, 167, 41, 0.349));
 padding: 40px 0;
-    &__right{
+background-image: linear-gradient(to right bottom, rgba($color-primary-light ,0.3),rgba($color-primary-dark,0.8)) ,url("https://raw.githubusercontent.com/yasser9947/Css-advance/master/img/nat-4.jpg"); 
+background-size: cover;
+
+@media only screen and (max-width: 600px) {
+    flex-flow: column-reverse;
+    .oneBook__right ,.oneBook__left{
+        width: auto;
+        margin-bottom: 30px;
+    }
+
+}
+    &__right {
         position: relative;
 
         height: 60vh;
@@ -25,17 +46,18 @@ padding: 40px 0;
         }
     }
     &__left{
+        background-color: rgba( black,   0.6);
+        box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 1.0);
+        color: #55c57a;
         width: 40vw;
         text-align: center;
-        // border: 1px  solid black;
-        // box-shadow: 1px 1px 1px 2px rgba(201, 39, 39, 0.116);
+        margin: 0 10px;
         display: flex;
+        padding-right: 20px;
         flex-flow: column;
         justify-content: space-between;
-        // align-items: center;
         p{
             text-align: right;
-            // border-top: 1px solid black;
         }
         h4{
             text-align: right;
@@ -74,7 +96,20 @@ padding: 40px 0;
         display: inline-block ;
         font-size: 20px; 
         width: 50%;
-        padding:10px 10px;
-        background-image:linear-gradient(to right bottom ,rgb(43, 133, 48) ,rgba(145, 184, 53, 0.801));
+        padding:5px 5px;
+        border-radius: 50px;
+        margin-bottom: 20px;
+        // margin-right: 20px;
+        transform: translateX(97%);
+        background-image: linear-gradient(to right ,#7ed56f, #28b485);
+    a {
+        color: rgb(23, 32, 4);
+        text-decoration: none;
+        @media only screen and (max-width: 600px) {
+            font-size: 14px;
+            padding:1px 1px !important;
+
+        }
+    }
     }
 }
