--- a/src/css/component/_btn.scss
+++ b/src/css/component/_btn.scss
@@ -1,5 +1,5 @@
 .btn{
-   background-image: linear-gradient(to right bottom ,gold ,rgba(184, 181, 181, 0.178));
+   background-image: linear-gradient(to right bottom ,#344641 ,rgba(35, 47, 43, 0.767));
    padding: 6px 40px;
     border-radius: 30px;
 color: cornsilk;
