--- a/src/css/component/books.scss
+++ b/src/css/component/books.scss
@@ -25,14 +25,18 @@ opacity: 0;    }
 opacity: 1;    }
   }
 .books {
-    font-size: 10px;
-    grid-column: center-start / center-end;
-    margin: 150px 0;
+    font-size: 5px;
+    // grid-column: center-start / center-end;
+    // margin: 150px 0;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 2fr ));
-    grid-gap: 70px;
-    margin: 5% 1%;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 2fr ));
+    // grid-gap: 70px;
+    // margin: 5% 1%;
+    width: 95vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     animation-name: swep; 
    
     animation-duration: 2s;
@@ -40,9 +44,13 @@ opacity: 1;    }
 }
 
 .book {
-  
+  margin-top: 20px;
     background-color: $color-grey-light-1;
+    width: 20%;
+    @media only screen and (max-width: 600px) {
+        width: 10%;
 
+    }
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 10px;
@@ -58,11 +66,11 @@ opacity: 1;    }
         grid-row: 1 / 2;
         grid-column: 2 / 3;
         fill: $color-primary;
-        height: 25px;
-        width: 25px;
-        z-index: 2;
-        justify-self: end;
-        margin: 1rem;
+        // height: 25px;
+        // width: 25px;
+        // z-index: 2;
+        // justify-self: end;
+        // margin: 1rem;
     }
 
     &__name {
@@ -85,7 +93,7 @@ opacity: 1;    }
 
     &__location,
     &__rooms {
-        margin-top: 25px;
+        margin-top: -15px;
     }
 
     &__location,
@@ -93,7 +101,7 @@ opacity: 1;    }
     &__area,
     &__price {
 
-        font-size: 15px;
+        font-size: 10px;
         margin-left: 3px;
 
 
@@ -128,3 +136,5 @@ opacity: 1;    }
         background-color: $color-primary-dark;
     }
 }
+
+
