--- a/src/css/pages/_login.scss
+++ b/src/css/pages/_login.scss
@@ -21,10 +21,12 @@ $color-black: #000;
     // border: 1px solid black;
     flex-flow: row;
     // border-radius: 10px;
+    border-radius: 10px;
     box-shadow: 0 13px 23px  rgba($color: $color-black, $alpha: 0.35);
 padding: 20px 0;
     align-items: center;
-    background-image:  linear-gradient(to right bottom , url('../../svg/bookBg.jpeg') 50% ,rgba(#fff , 0.0) 50% );
+    background-image: linear-gradient(-90deg,rgba(#f9fbe7, 0.863) 50%,rgba(   #f9fbe7, 0.463) 20% , rgba(246, 240, 187, 0.37) 20% , ), url('https://i.pinimg.com/originals/45/65/af/4565afc3791d800532723a28c329b3c1.jpg');
+background-size: contain;
     @media only screen and (max-width: 600px) {
         padding: 0;
 
@@ -38,25 +40,24 @@ padding: 20px 0;
              background-image: linear-gradient(to right bottom , rgba(#f9fbe7, 0.463) , rgba(246, 240, 187, 0.37)), url('https://i.pinimg.com/originals/45/65/af/4565afc3791d800532723a28c329b3c1.jpg');
             width: 200px;
             height: 350px;
-             border-radius: 10px !important;
+             border-radius: 10px;
            }
     }
     &__bg--1{
-         background-image: linear-gradient(to right bottom , rgba(#f9fbe7, 0.463) , rgba(246, 240, 187, 0.37)), url('https://i.pinimg.com/originals/45/65/af/4565afc3791d800532723a28c329b3c1.jpg');
-     border-radius: 10px  0px 0px 10px;
+    
      background-size: 100%;
 
     }
     &__bg--2{
         // background-image:  linear-gradient(to right bottom ,rgba($color-primary-light,0.2) , rgba($color-primary-dark,.2) );
-        border-radius: 0px  10px 10px 0px;
+       
 
        }
     //for background
     &__bg{
         // box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.35);
         
-      
+        // border-radius: 100px;
         width: 400px;
         height: 350px;
         padding:10px 70px 50px 70px;
