--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -94,6 +94,7 @@ body {
 
         &:hover{
             transform: translateY(-10px);
+            background-position: 10%;
         }
        
     }
