--- a/src/css/component/books.scss
+++ b/src/css/component/books.scss
@@ -20,65 +20,74 @@ $bp-medium: 50em;    // 800px;
 $bp-small: 37.5em;    // 600px;
 @keyframes swep {
     from {
-opacity: 0;    }
+transform: scale(0); 
+   }
     to {
-opacity: 1;    }
+        transform: scale(1); 
+    }
   }
 .books {
-    font-size: 5px;
-    // grid-column: center-start / center-end;
-    // margin: 150px 0;
+    // font-size: 5px;
+    // // grid-column: center-start / center-end;
+    // // margin: 150px 0;
 
-    // display: grid;
-    // grid-template-columns: repeat(auto-fit, minmax(250px, 2fr ));
-    // grid-gap: 70px;
-    // margin: 5% 1%;
-    width: 95vw;
+    // // display: grid;
+    // // grid-template-columns: repeat(auto-fit, minmax(250px, 2fr ));
+    // // grid-gap: 70px;
+    // // margin: 5% 1%;
+    // width: 95vw;
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    animation-name: swep; 
-   
-    animation-duration: 2s;
+  
 
 }
 
 .book {
   margin-top: 20px;
+  animation-name: swep; 
+   
+  animation-duration: 2s;
     background-color: $color-grey-light-1;
-    width: 20%;
+    width: 26%;
+    height: 422px;
+    border-radius: 10px;
+    overflow: hidden;
+    justify-content: space-between;
+
     @media only screen and (max-width: 600px) {
-        width: 10%;
-
+        width: 48%;
+        height: 340px;
+        margin-top: 9px;
+     
     }
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 10px;
+  display: flex;
+  flex-flow: column;
+        &__up {
+            width: 100%;
+            height: 275px;
+            @media only screen and (max-width: 600px) {
+                
+                height: 200px;
+            }
+            position: relative;
 
+        }
     &__img {
         width: 100%;
-        grid-row: 1 / 2;
-        grid-column: 1 / -1;
+       height: 100%;
         z-index: 1;
     }
-
-    &__like {
-        grid-row: 1 / 2;
-        grid-column: 2 / 3;
-        fill: $color-primary;
-        // height: 25px;
-        // width: 25px;
-        // z-index: 2;
-        // justify-self: end;
-        // margin: 1rem;
-    }
-
     &__name {
-        grid-row: 1 / 2;
-        grid-column: 1 / -1;
-        justify-self: center;
-        align-self: end;
+       position: absolute;
+        bottom: 2%;
+        left: 5%;
         z-index: 3;
+        @media only screen and (max-width: 600px) {
+            font-size: 15px;
+
+        }
 
         width: 80%;
         font-family: $font-display;
@@ -88,37 +97,46 @@ opacity: 1;    }
         background-color: $color-secondary;
         color: #fff;
         font-weight: 400;
-        transform: translateY(50%);
+        margin: 0;
     }
-
-    &__location,
-    &__rooms {
-        margin-top: -15px;
-    }
-
-    &__location,
-    &__rooms,
-    &__area,
-    &__price {
-
-        font-size: 10px;
-        margin-left: 3px;
-
-
+    &__center {
         display: flex;
-        align-items: center;
+        width: 100%;
+        flex-wrap: wrap;
+        margin-top: 5px;
+        // height: 20%;
+       
+    }
+    &__ditails{
+        display: flex;
+        justify-content: space-around;
+        flex-flow: row-reverse;
+        font-size: 12px;
+        img {
+            height:30px
 
-        svg {
-            fill: $color-primary;
-            height: 20px;
-            width: 20px;
-            margin-right:10px;
         }
+        @media only screen and (max-width: 600px) {
+            font-size: 10px;
+                img {
+                    height:20px
+                }
+
+        }
+        width: 50%;
+    }
+    &__btn {
+        font-size: 15px;
+        @media only screen and (max-width: 600px) {
+            font-size: 12px;
+        }
+        // height: 10%;
     }
 
-    &__btn {
-        grid-column: 1 / -1;
-    }
+
+   
+
+   
 }
 .btn2 {
     background-image: linear-gradient(to right bottom ,rgb(185, 175, 115) ,rgba(165, 187, 114, 0.178));
@@ -126,7 +144,7 @@ opacity: 1;    }
     border: none;
     border-radius: 0;
     font-family: $font-display;
-    font-size: 15px;
+    
     text-transform: uppercase;
     padding: 18px 30px;
     cursor: pointer;
