--- a/src/css/pages/_login.scss
+++ b/src/css/pages/_login.scss
@@ -146,6 +146,22 @@ background-size: contain;
         }
     }
 
+
+    &__erorr {
+        background-image: linear-gradient(to right bottom ,rgba(#9e140a,0.8) , rgba(#c93131,.8) );
+        clip-path: polygon(50% 0%, 65% 18%, 100% 19%, 100% 100%, 0 100%, 0 19%, 36% 19%);
+        width: 50%;
+        padding-top: 10px;
+        opacity: 0.7;
+        color: wheat;
+        border-radius: 10px;
+        position: absolute;
+      right: 25%;
+      top:-10px;
+        text-align: center;
+        margin: auto;
+    }
+
 }
 
 .imageInsearch{
@@ -155,6 +171,6 @@ background-size: contain;
         &:hover {
             border: 6px solid green;
         }
-
+      
     }
 }
