--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -133,3 +133,4 @@ body {
 @import './component/ditails';
 @import './component/theBooks';
 @import './component/nave';
+@import './component/autoSuggest';
