--- a/src/css/component/_btn.scss
+++ b/src/css/component/_btn.scss
@@ -2,6 +2,7 @@
    background-image: linear-gradient(to right bottom ,#344641 ,rgba(35, 47, 43, 0.767));
    padding: 6px 40px;
     border-radius: 30px;
+    cursor: pointer;
 color: cornsilk;
     &:link , &:visited {
 
