--- a/src/css/pages/_login.scss
+++ b/src/css/pages/_login.scss
@@ -57,7 +57,7 @@ background-size: contain;
     //for background
     &__bg{
         // box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.35);
-        
+        position: relative;
         // border-radius: 100px;
         width: 400px;
         min-height: 350px;
@@ -158,6 +158,19 @@ background-size: contain;
         position: absolute;
       right: 25%;
       top:-10px;
+        text-align: center;
+        margin: auto;
+    }
+    &__erorr2 {
+        background-image: linear-gradient(to right bottom, rgba(158, 20, 10, 0.8), rgba(201, 49, 49, 0.8));
+        width: 40%;
+        padding-top: 0px;
+        opacity: 0.7;
+        color: wheat;
+        border-radius: 10px;
+        position: absolute;
+        right: 70px;
+        top: -37px;
         text-align: center;
         margin: auto;
     }
