--- a/src/css/component/_btn.scss
+++ b/src/css/component/_btn.scss
@@ -14,3 +14,17 @@ color: cornsilk;
    
 
 }
+
+.btn-gry{
+
+    // background: #fff;
+    border: 3px;
+    background-color: #ddd;
+    color: rgb(10, 1, 1);
+    font-size: 18px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: white;
+
+}
