--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,6 +13,7 @@ body {
 @import './component/btn';
 @import './pages/preOrder';
 @import './pages/order';
+@import './pages/userAcount';
 
 @import './pages/login';
 @import './pages/dashboard';
