--- a/src/css/component/_btn.scss
+++ b/src/css/component/_btn.scss
@@ -28,3 +28,15 @@ color: cornsilk;
     color: white;
 
 }
+
+.btn-gry-secondry{
+    // #2d2d2d
+        border: 3px;
+    background-color: #2d2d2d;
+    color: rgb(10, 1, 1);
+    font-size: 18px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: white;
+}
