--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,6 +14,7 @@ body {
 @import './pages/preOrder';
 @import './pages/order';
 @import './pages/userAcount';
+@import './pages/addBook';
 
 @import './pages/login';
 @import './pages/dashboard';
